Stable version. Fixed offline issues.